[package]
name = "wallet"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.1.13"
nj-sys = "1.0.0"
winapi = { version = "0.3.8", features = ["libloaderapi"] }
detour = { version = "0.7.1", default-features = false }
