[package]
name = "wallet"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
nj-sys = "1.0.0"

[target.'cfg(windows)'.dependencies]
detour = { version = "0.7.1", default-features = false }
winapi = { version = "0.3.8", features = ["libloaderapi"] }
